--- a/usgs/src/main/AndroidManifest.xml
+++ b/usgs/src/main/AndroidManifest.xml
@@ -8,6 +8,6 @@
         <dist:delivery>
             <dist:install-time />
         </dist:delivery>
-        <dist:fusing dist:include="false" />
+        <dist:fusing dist:include="true" />
     </dist:module>
 </manifest>
